# smri-fm

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: using_asparagus_eval.md
scripts/: eval_fomo26.sh  eval_preprocess_task5.sh  setup_asparagus_env.sh
scripts/evals_sbatch/: task_3.sbatch
scripts/synthseg/: run_synthseg.sbatch
src/asparagus_bridge/: README.md  checkpoint.py  convert_checkpoint.py  models_smri_mae.py  test_smri_mae_segmentation.py
src/asparagus_bridge/configs/finetuning/: 20260525_bag_task_3.yaml  smoke_test_cls_task_1.yaml  smoke_test_cls_task_1_flair_modality.yaml  smoke_test_cls_task_5.yaml  smoke_test_linear_probe_tasks.yaml  smoke_test_seg_task_2.yaml  smoke_test_seg_task_4.yaml
src/asparagus_bridge/configs/finetuning/task_3__normalized_weights/: 20260526_bag_task_3_pool_cls.yaml  20260526_bag_task_3_pool_mean.yaml
src/asparagus_bridge/configs/model/: smri_fm_mae.yaml  smri_mae.yaml
src/data/: mri_data.py
src/evaluation/: __init__.py  api.py  config_schema.py  proposal.md  readme.md
src/evaluation/config/: default_probe.yaml
src/evaluation/models/: __init__.py  base.py  dummy.py  registry.py
src/evaluation/tasks/: __init__.py  base.py  registry.py  task3_brain_age.py
src/smri_mae/: main_pretrain.py  masking.py  model_mae.py  modules.py  utils.py  visualization.py
src/smri_mae/config/: default_pretrain.yaml
tests/: test_asparagus_checkpoint_conversion.py  test_evaluation_probe.py  test_smri_mae_segmentation.py
